@@ -1,3 +1,2 @@
 /* released to the public domain */
-int patmat(char *raw,char *pat);
 int patimat(char *raw, char *pat); /* case insensitive */
